This the first commit

--- a/result.css
+++ b/result.css
@@ -31,7 +31,7 @@ p {
 }
 
 body {
-    background: url(../年間研究images/背景5.webp) center/contain;
+    background: url(../images/haikei5.webp) center/contain;
 }
 
 .youtube {
