--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .bg-swicher {
     width: 100vw;
     height: 100vh;
-    background-image: url(年間研究images/ガチャポン2.jpeg);
+    background-image: url(images/gacha2.jpeg);
     background-position: center center;
     background-size: cover;
     display: flex;
@@ -41,7 +41,7 @@
 }
 
 body {
-    background: url(../年間研究images/bg-about.jpg) center/contain;
+    background: url(../images/bg-about.jpg) center/contain;
     font-family: 'Noto Sans JP', sans-serif;
 }
 
@@ -52,7 +52,7 @@ body {
 }
 
 #bg-fixed {
-    background: url(../年間研究images/music-7.jpeg) center/cover;
+    background: url(../images/music-7.jpeg) center/cover;
     background-attachment: fixed;
     height: 300px;
 }
