--- a/result.css
+++ b/result.css
@@ -31,7 +31,7 @@ p {
 }
 
 body {
-    background: url(../images/haikei5.webp) center/contain;
+    background: url(../images/back_graund.png) center/contain;
 }
 
 .youtube {
