--- a/result.css
+++ b/result.css
@@ -31,7 +31,7 @@ p {
 }
 
 body {
-    background: url(../images/back_graund.png) center/contain;
+    background: url("https://github.com/Aii-s/gachaponsongs/blob/main/images/back_graound.png?raw=true") center/contain;
 }
 
 .youtube {
